export interface PropositionDto {
  gaps: Array<string>;
  id: string;
  numberOfAuthors: number;
  readOnly: boolean;
}
