export interface PropositionSubmissionDto {
  gaps: Array<string>;
}
